--- a/src/pug/components/are/_work.pug
+++ b/src/pug/components/are/_work.pug
@@ -2,6 +2,89 @@
 
 section#work.work
   .c-grid
-    .work__wrapper
+    .work__wrapper.work__wrapper-0
+
+      h2.work__title.work__title-0.c-title!= "INDUSTRY SECTORS WE WORK IN"
+
+      .work__row.work__row-0
+        .work__row-left
+
+          .work__box.work__box-0
+            p.work__box-title!= "ENTERPRISE R&D"
+
+            ul
+              li!= "— Automotive"
+              li!= "— Defence & Aerospace"
+              li!= "— Chemicals"
+              li!= "— Consumer electronics"
+              li!= "— Energy & Mining"
+              li!= "— Telecoms, Computing"
+
+        .work__row-right
+
+          .work__box.work__box-1
+            p.work__box-title!= "ADVISORY & INVESTING"
+
+            ul
+              li!= "— Advisory and Consulting"
+              li!= "— Venture Capital"
+
+          .work__box.work__box-2
+            p.work__box-title!= "GOVERNMENT & OTHER"
+
+            div
+              ul
+                li!= "— Government and Universities"
+                li!= "— Gaming"
+
+              ul
+                li!= "— Retail"
+                li!= "— Banking"
+
+      .work__row.work__row-1
+
+        .are__block
+          div
+            .are__block-circle
+              i
+          div
+            span!= "Gain solid commercial experience to stand out from the crowd"
+        .are__block
+          div
+            .are__block-circle
+              i
+          div
+            span!= "Hone your consulting and analytical skills"
+
+    .work__wrapper.work__wrapper-1
+
+      .work__row.work__row-2
+        .work__row-left
+          h2.work__title.work__title-1.c-title!= "WORK, ONLINE, <span class='c-title--color'>ANYTIME</span>"
+
+          p.work__desc!= "Choose what to get involved in based on what motivates you. Accept or decline projects as you wish, with no obligations."
+
+          .are__block
+            div
+              .are__block-circle
+                i
+            div
+              span!= "Specialise in precisely the kind of work you enjoy most"
+
+          .are__block
+            div
+              .are__block-circle
+                i
+            div
+              span!= "Fit small tasks around your existing commitments"
+
+        .work__row-right
+
+          .work__img.work__img-0
+
+    .work__wrapper.work__wrapper-2
+
+      .work__img.work__img-1
+
 
 // SECTION work :: END
