--- a/src/scss/_components/are/_main.scss
+++ b/src/scss/_components/are/_main.scss
@@ -1,5 +1,68 @@
 // SECTION main :: START
 
-.a-main {}
+.a-main {
+  overflow: hidden;
+  position: relative;
+  padding-top: 120px;
+  padding-bottom: 180px;
+
+  &__bg {
+    z-index: -1;
+    position: absolute;
+    display: flex;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    &-left,
+    &-right {
+      height: 100%;
+    }
+
+    &-left {
+      width: 40%;
+    }
+
+    &-right {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      width: 60%;
+
+      img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+      }
+    }
+  }
+
+  &__wrapper {
+    display: flex;
+
+    &-left,
+    &-right {
+      width: 50%;
+    }
+  }
+
+  &__title {
+    padding-bottom: 18px;
+    text-align: left;
+    line-height: 1.2;
+  }
+
+  &__desc {
+    font-size: 22px;
+    font-weight: 300;
+    line-height: 1.45;
+    color: #4a4a4a;
+
+    &--pb {
+      padding-bottom: 30px;
+    }
+  }
+}
 
 // SECTION main :: END
