--- a/src/pug/components/are/_collective.pug
+++ b/src/pug/components/are/_collective.pug
@@ -1,12 +1,17 @@
 // SECTION collective :: START
 
 section#collective.collective
+
+  .collective__bg
+    .collective__bg-left
+      img(src="./img/img-collective-pc.png" srcset="./img/img-collective-pc@2x.png 2x" alt="" title="")
+
+    .collective__bg-right
+
   .c-grid
     .collective__wrapper
       .collective__wrapper-left
-        
-        img(src="./img/img-collective-pc.png" srcset="./img/img-collective-pc@2x.png 2x" alt="" title="")
-        
+
       .collective__wrapper-right
 
         h2.collective__title.c-title!= "<span class='c-title--color'>COLLECTIVE</span> INTELLIGENCE"
