--- a/src/scss/_components/are/_collective.scss
+++ b/src/scss/_components/are/_collective.scss
@@ -1,19 +1,32 @@
 // SECTION collective :: START
 
 .collective {
-  padding-top: 96px;
+  overflow: hidden;
+  position: relative;
+  padding-top: 101px;
   padding-bottom: 96px;
   background-color: #44b4a8;
 
-  &__wrapper {
-    display: flex;
+  &__bg {
+    z-index: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 
     &-left,
     &-right {
-      width: 50%;
+      //width: 50%;
+      height: 100%;
     }
 
     &-left {
+      display: flex;
+      align-items: center;
+      width: 52%;
+      padding-left: 36px;
+
       img {
         display: block;
         max-width: 100%;
@@ -22,10 +35,29 @@
         margin-right: auto;
       }
     }
+
+    &-right {
+      width: 48%;
+    }
+  }
+
+  &__wrapper {
+    z-index: 2;
+    position: relative;
+    display: flex;
+
+    &-left,
+    &-right {
+      width: 50%;
+    }
+
+    &-right {
+      padding-left: 10px;
+    }
   }
 
   &__title {
-    padding-bottom: 18px;
+    padding-bottom: 22px;
     text-align: left;
 
     &.c-title {
@@ -38,14 +70,14 @@
   }
 
   &__desc {
-    padding-bottom: 61px;
+    padding-bottom: 64px;
     font-size: 22px;
     font-weight: 300;
     line-height: 1.45;
     color: #000;
 
     &--pb {
-      padding-bottom: 30px;
+      padding-bottom: 36px;
     }
   }
 }
