--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -64,3 +64,5 @@
 @import "_components/are/expertise";
 @import "_components/are/work";
 @import "_components/are/mapping";
+
+@import "_components/sign/sign";
