Apply page - create sign/apply section, with slider - w\ adaptive.

--- a/src/pug/utilities/_dataForm.pug
+++ b/src/pug/utilities/_dataForm.pug
@@ -58,17 +58,29 @@
       val: ""
     },
 
-    selectFieldCustom: {
+    selectFieldStatus: {
       classMod: "",
-      uniqueName: "select",
-      labelVal: "Select custom",
+      uniqueName: "select_status",
+      labelVal: "Current Status",
       selectClassMod: "",
       selectOption: [
         'Some option 1',
         'Some option 2',
         'Some option 3'
       ],
-      placeholderVal: "Choose your..."
+      placeholderVal: "Choose option"
+    },
+    selectFieldUniversity: {
+      classMod: "",
+      uniqueName: "select_university",
+      labelVal: "University",
+      selectClassMod: "",
+      selectOption: [
+        'Some option 1',
+        'Some option 2',
+        'Some option 3'
+      ],
+      placeholderVal: "Choose option"
     },
     selectFieldSelectric: {
       classMod: "",
