--- a/src/scss/_macros/_form.scss
+++ b/src/scss/_macros/_form.scss
@@ -5,15 +5,15 @@
 // ==================================================
 
 // form
-$form-width: 600px;
+$form-width: 436px;
 
 // group
 $form-field-group-two-margin: 15px;
 $form-field-group-three-margin: 15px;
 
 // field
-$form-field-margin: 30px;
-$form-field-input-height: 50px;
+$form-field-margin: 15px;
+$form-field-input-height: 30px;
 $form-field-radio-height: $form-field-input-height;
 $form-field-checkbox-height: $form-field-input-height;
 $form-field-select-height: $form-field-input-height;
@@ -21,21 +21,21 @@ $form-field-textarea-height: 150px;
 
 // label
 $form-label-height: auto;
-$form-label-margin-bottom: 10px;
+$form-label-margin-bottom: 0;
 $form-label-font-size: 16px;
-$form-label-font-weight: normal;
+$form-label-font-weight: bold;
 
 // input
-$form-input-border-radius: 5px;
+$form-input-border-radius: 0;
 $form-input-border-width: 1px;
-$form-input-border-color: gray;
+$form-input-border-color: #9b9b9b;
 $form-input-box-shadow: none;
-$form-input-padding: 0 20px;
+$form-input-padding: 0 8px;
 $form-input-color: #000;
-$form-input-font-size: 16px;
+$form-input-font-size: 12px;
 $form-input-font-weight: normal;
-$form-input-placeholder-color: #666;
-$form-input-placeholder-font-size: 16px;
+$form-input-placeholder-color: #9b9b9b;
+$form-input-placeholder-font-size: 12px;
 $form-input-placeholder-font-weight: normal;
 
 // radio
@@ -69,12 +69,12 @@ $form-checkbox-icon-inner-border-color: rgba(#000, 1);
 $form-checkbox-icon-inner-border-width: 1px;
 
 // select
-$form-select-border-radius: 5px;
+$form-select-border-radius: 0;
 $form-select-border-width: 1px;
-$form-select-border-color: gray;
+$form-select-border-color: #9b9b9b;
 $form-select-box-shadow: none;
-$form-select-icon-width: 50px;
-$form-select-value-padding-left: 20px;
+$form-select-icon-width: 30px;
+$form-select-value-padding-left: 8px;
 $form-select-value-color: #000;
 $form-select-value-font-size: $form-input-font-size;
 $form-select-value-font-weight: normal;
@@ -103,6 +103,7 @@ $form-notify-font-weight: bold;
 .c-form {
   width: 100%;
   max-width: $form-width;
+  margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
 
@@ -442,9 +443,9 @@ $form-notify-font-weight: bold;
       height: 100%;
 
       i {
-        padding: 3px;
+        padding: 2px;
         border: solid #000;
-        border-width: 0 2px 2px 0;
+        border-width: 0 1px 1px 0;
         transform: rotate(45deg);
         @include transition(transform, border-color);
 
