--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -4165,24 +4165,34 @@ picture {
   margin-bottom: 17px;
 }
 
-/* line 69, src/scss/_components/sign/_sign.scss */
+/* line 70, src/scss/_components/sign/_sign.scss */
+.sign--apply.sign--closed .sign__wrapper {
+  min-height: 740px;
+}
+
+/* line 73, src/scss/_components/sign/_sign.scss */
+.sign--apply.sign--closed .sign__subtitle {
+  padding-bottom: 15px;
+}
+
+/* line 80, src/scss/_components/sign/_sign.scss */
 .sign--apply .sign__wrapper {
   min-height: 650px;
 }
 
-/* line 73, src/scss/_components/sign/_sign.scss */
+/* line 84, src/scss/_components/sign/_sign.scss */
 .sign--apply .sign__wrapper-left .sign__title {
   padding-bottom: 12px;
   text-transform: none;
   text-align: left;
 }
 
-/* line 80, src/scss/_components/sign/_sign.scss */
+/* line 91, src/scss/_components/sign/_sign.scss */
 .sign--apply .sign__wrapper-right {
   padding-left: 55px;
 }
 
-/* line 83, src/scss/_components/sign/_sign.scss */
+/* line 94, src/scss/_components/sign/_sign.scss */
 .sign--apply .sign__wrapper-right .think__slider {
   width: -webkit-calc(100% + 30px);
   width: calc(100% + 30px);
@@ -4191,19 +4201,36 @@ picture {
   margin-top: -30px;
 }
 
-/* line 91, src/scss/_components/sign/_sign.scss */
+/* line 102, src/scss/_components/sign/_sign.scss */
 .sign--apply .sign__subtitle {
   padding-bottom: 44px;
   color: #000000;
 }
 
-/* line 100, src/scss/_components/sign/_sign.scss */
+/* line 107, src/scss/_components/sign/_sign.scss */
+.sign--apply .sign__desc {
+  padding-bottom: 20px;
+  color: #000000;
+}
+
+/* line 112, src/scss/_components/sign/_sign.scss */
+.sign--apply .sign__btn {
+  max-width: 436px;
+  margin-left: 0;
+}
+
+/* line 118, src/scss/_components/sign/_sign.scss */
+.sign--apply .c-form {
+  margin-left: 0;
+}
+
+/* line 125, src/scss/_components/sign/_sign.scss */
 .sign--plain .sign__wrapper {
   padding-top: 30px;
   padding-bottom: 30px;
 }
 
-/* line 104, src/scss/_components/sign/_sign.scss */
+/* line 129, src/scss/_components/sign/_sign.scss */
 .sign--plain .sign__wrapper-right {
   display: -webkit-box;
   display: -webkit-flex;
@@ -4216,12 +4243,12 @@ picture {
   padding-left: 59px;
 }
 
-/* line 109, src/scss/_components/sign/_sign.scss */
+/* line 134, src/scss/_components/sign/_sign.scss */
 .sign--plain .sign__wrapper-right > div {
   padding-top: 15px;
 }
 
-/* line 113, src/scss/_components/sign/_sign.scss */
+/* line 138, src/scss/_components/sign/_sign.scss */
 .sign--plain .sign__wrapper-right .sign__title {
   padding-bottom: 8px;
   text-align: left;
@@ -4229,7 +4256,7 @@ picture {
   line-height: 1.2;
 }
 
-/* line 122, src/scss/_components/sign/_sign.scss */
+/* line 147, src/scss/_components/sign/_sign.scss */
 .sign--plain .sign__heading {
   padding-bottom: 9px;
   font-size: 25px;
@@ -4240,7 +4267,7 @@ picture {
   text-align: center;
 }
 
-/* line 132, src/scss/_components/sign/_sign.scss */
+/* line 157, src/scss/_components/sign/_sign.scss */
 .sign--plain .sign__subtitle {
   padding-bottom: 30px;
   font-size: 22px;
@@ -4249,7 +4276,7 @@ picture {
   color: #ffffff;
 }
 
-/* line 140, src/scss/_components/sign/_sign.scss */
+/* line 165, src/scss/_components/sign/_sign.scss */
 .sign--plain .sign__desc {
   padding-bottom: 27px;
   font-size: 18px;
@@ -4258,17 +4285,17 @@ picture {
   color: #ffffff;
 }
 
-/* line 147, src/scss/_components/sign/_sign.scss */
+/* line 172, src/scss/_components/sign/_sign.scss */
 .sign--plain .sign__desc:last-of-type {
   padding-bottom: 0;
 }
 
-/* line 152, src/scss/_components/sign/_sign.scss */
+/* line 177, src/scss/_components/sign/_sign.scss */
 .sign--plain .sign__btn {
   margin-bottom: 17px;
 }
 
-/* line 158, src/scss/_components/sign/_sign.scss */
+/* line 183, src/scss/_components/sign/_sign.scss */
 .sign__bg {
   z-index: -1;
   position: absolute;
@@ -4282,22 +4309,22 @@ picture {
   height: 100%;
 }
 
-/* line 167, src/scss/_components/sign/_sign.scss */
+/* line 192, src/scss/_components/sign/_sign.scss */
 .sign__bg-left, .sign__bg-right {
   width: 50%;
 }
 
-/* line 172, src/scss/_components/sign/_sign.scss */
+/* line 197, src/scss/_components/sign/_sign.scss */
 .sign__bg-left {
   background-color: #ffffff;
 }
 
-/* line 176, src/scss/_components/sign/_sign.scss */
+/* line 201, src/scss/_components/sign/_sign.scss */
 .sign__bg-right {
   background-color: #44b4a8;
 }
 
-/* line 181, src/scss/_components/sign/_sign.scss */
+/* line 206, src/scss/_components/sign/_sign.scss */
 .sign__wrapper {
   display: -webkit-box;
   display: -webkit-flex;
@@ -4307,12 +4334,12 @@ picture {
   height: calc(100vh - (172px + 51px));
 }
 
-/* line 185, src/scss/_components/sign/_sign.scss */
+/* line 210, src/scss/_components/sign/_sign.scss */
 .sign__wrapper-left, .sign__wrapper-right {
   width: 50%;
 }
 
-/* line 191, src/scss/_components/sign/_sign.scss */
+/* line 216, src/scss/_components/sign/_sign.scss */
 .sign__btn {
   width: 100%;
   max-width: 461px;
@@ -4321,7 +4348,7 @@ picture {
   margin-right: auto;
 }
 
-/* line 199, src/scss/_components/sign/_sign.scss */
+/* line 224, src/scss/_components/sign/_sign.scss */
 .sign__box {
   position: relative;
   display: -webkit-box;
@@ -4336,18 +4363,18 @@ picture {
   max-width: 50%;
 }
 
-/* line 206, src/scss/_components/sign/_sign.scss */
+/* line 231, src/scss/_components/sign/_sign.scss */
 .sign__box-0 {
   border-right: 1px solid #f2f2f2;
 }
 
-/* line 211, src/scss/_components/sign/_sign.scss */
+/* line 236, src/scss/_components/sign/_sign.scss */
 .sign__box > div:nth-of-type(1) {
   width: 64px;
   padding-left: 16px;
 }
 
-/* line 215, src/scss/_components/sign/_sign.scss */
+/* line 240, src/scss/_components/sign/_sign.scss */
 .sign__box > div:nth-of-type(2) {
   width: 100%;
   max-width: -webkit-calc(100% - 64px);
@@ -4355,7 +4382,7 @@ picture {
   padding-right: 10px;
 }
 
-/* line 222, src/scss/_components/sign/_sign.scss */
+/* line 247, src/scss/_components/sign/_sign.scss */
 .sign__box-wrapper {
   display: -webkit-box;
   display: -webkit-flex;
@@ -4368,7 +4395,7 @@ picture {
   padding-bottom: 35px;
 }
 
-/* line 228, src/scss/_components/sign/_sign.scss */
+/* line 253, src/scss/_components/sign/_sign.scss */
 .sign__box-circle {
   display: -webkit-box;
   display: -webkit-flex;
@@ -4389,7 +4416,7 @@ picture {
   background-color: #f2f2f2;
 }
 
-/* line 237, src/scss/_components/sign/_sign.scss */
+/* line 262, src/scss/_components/sign/_sign.scss */
 .sign__box-circle span {
   font-size: 20px;
   font-weight: bold;
@@ -4399,7 +4426,7 @@ picture {
   color: #4a4a4a;
 }
 
-/* line 247, src/scss/_components/sign/_sign.scss */
+/* line 272, src/scss/_components/sign/_sign.scss */
 .sign__box p {
   font-size: 14px;
   font-weight: 300;
@@ -4407,12 +4434,38 @@ picture {
   color: #000000;
 }
 
-/* line 255, src/scss/_components/sign/_sign.scss */
+/* line 280, src/scss/_components/sign/_sign.scss */
+.sign__wait {
+  width: 100%;
+  max-width: 480px;
+  min-height: 172px;
+  padding: 25px 16px;
+  background-color: #e91d63;
+}
+
+/* line 287, src/scss/_components/sign/_sign.scss */
+.sign__wait p {
+  padding-bottom: 10px;
+  font-size: 32px;
+  line-height: 1.25;
+  letter-spacing: -0.7px;
+  color: #ffffff;
+}
+
+/* line 295, src/scss/_components/sign/_sign.scss */
+.sign__wait span {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.5;
+  color: #ffffff;
+}
+
+/* line 303, src/scss/_components/sign/_sign.scss */
 .sign__info {
   text-align: center;
 }
 
-/* line 258, src/scss/_components/sign/_sign.scss */
+/* line 306, src/scss/_components/sign/_sign.scss */
 .sign__info i {
   z-index: -1;
   position: absolute;
@@ -4443,7 +4496,7 @@ picture {
   font-style: normal;
 }
 
-/* line 278, src/scss/_components/sign/_sign.scss */
+/* line 326, src/scss/_components/sign/_sign.scss */
 .sign__info span,
 .sign__info a {
   font-size: 12px;
@@ -4451,13 +4504,13 @@ picture {
   line-height: 1.33;
 }
 
-/* line 285, src/scss/_components/sign/_sign.scss */
+/* line 333, src/scss/_components/sign/_sign.scss */
 .sign__info span {
   position: relative;
   color: #000000;
 }
 
-/* line 290, src/scss/_components/sign/_sign.scss */
+/* line 338, src/scss/_components/sign/_sign.scss */
 .sign__info a {
   color: #44b4a8;
   text-decoration: underline;
